# My-Algo-Trading-Code

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Nifty Multi Strategy Front Test - Master File.py  README.md  algo.py  pyproject.toml  requirements-ai.txt  requirements-brokers.txt  requirements-dev.txt  requirements.txt  test_market_data_health.py  test_nifty_multi_strategy_master.py
.github/: dependabot.yml
.github/workflows/: quality-and-security.yml
Data Extractors/: Banknifty 1m 5Y Data Fetch Dhan.py  Finnifty 1m 5Y Data Fetch Dhan.py  Nifty 1m 5Y Data Fetch Dhan.py  Readme.md  index_1m_5y_data_fetch_dhan_common.py  test_index_fetch_construction.py
Dependencies/: Readme.md  broker_contract.py  check_env_config.py  dhan_token_setup.py  diagnostic_preflight.py  env.example  execution_ledger.py  kotak_execution.py  market_data_health.py  next_open_entry.py  order_splitting.py  risk_sizing.py  secret_redaction.py  startup_exposure.py  test_broker_contract.py  test_check_env_config.py  test_dhan_token_setup.py  test_diagnostic_preflight.py  test_execution_ledger.py  test_next_open_entry.py  test_order_splitting.py  test_repository_policy.py  test_risk_sizing.py  test_secret_redaction.py  test_startup_exposure.py  test_tick_bar_builder.py  test_trading_lifecycle.py  tick_bar_builder.py  trading_lifecycle.py
Dependencies/Dhan API/: dhan_execution.py  diagnose_dhan_symbol.py  test_dhan_execution.py
Dependencies/Flattrade API/: diagnose_flattrade_symbol.py  flattrade_execution.py  test_flattrade_execution.py
Dependencies/Kotak API/: diagnose_kotak_symbol.py  kotak_execution.py
Dependencies/Shoonya API/: NorenApi.py  diagnose_shoonya_symbol.py  shoonya_execution.py
My Backtest Files (For Reference)/: Nifty CPR Strategy Backtest.py  Nifty EMA Trend Strategy Backtest.py  Nifty Heiken Ashi Futures 5Y Backtest.py  Nifty Renko Strategy Backtest.py  Readme.md  profit_shooter_backtest.py
My Backtest Files (For Reference)/Subhamoy Strategies/: Nifty Goldmine Strategy Backtest.py  Nifty Money Machine Strategy Backtest.py  subhamoy_backtest_common.py
Signal Generators/: Donchian Signal Generator Bearish.py  Nifty Bollinger Bands Signal Generator.py  Nifty Keltner Squeeze Signal Generator.py  Nifty ML Ensemble Signal Generator.py  Nifty Mean Reversion Zscore Signal Generator.py  Nifty Multi Timeframe Signal Generator.py  Nifty Opening Range Breakout Signal Generator.py  Nifty Opening Strike PCR VWAP ATR Signal Generator.py  Nifty Parabolic SAR Signal Generator.py  Nifty RSI Divergence Signal Generator.py  Nifty RSI Reversal Signal Generator.py  Nifty SMA Crossover Signal Generator.py  Nifty Stochastic Oscillator Signal Generator.py  Nifty Supertrend Signal Generator.py  Nifty Volatility Breakout Signal Generator.py  Readme.md  Supertrend Signal Generator Bullish.py  ema_trend_strategy_logic.py  heikin_ashi_strategy_logic.py  misc_strategy_common.py  profit_shooter_strategy_logic.py  renko_strategy_logic.py  renko_strategy_logic_9_21.py  test_deterministic_strategy_safety.py  test_renko_bounds.py  test_trading_bot_ports.py
Signal Generators/CPR Strategy/: Nifty CPR Algo 1 Signal Generator.py  Nifty CPR Algo 2 Signal Generator.py  Nifty CPR Algo 3 Signal Generator.py  Nifty CPR Combined Signal Generator.py  cpr_strategy_logic.py  test_cpr_strategy_signal_generators.py
Signal Generators/SL Hunting AI Agent/: README.md  conftest.py  sl_hunting_agent.py  sl_hunting_ai_validation.py  sl_hunting_coach.py  sl_hunting_doc.md  sl_hunting_executor.py  sl_hunting_indicators.py  sl_hunting_journal.py  sl_hunting_knowledge.py  sl_hunting_lessons.py  sl_hunting_runner.py  sl_hunting_tools.py
Signal Generators/SL Hunting AI Agent/tests/: test_sl_hunting_agent.py  test_sl_hunting_indicators.py  test_sl_hunting_journal.py  test_sl_hunting_lessons.py  test_sl_hunting_runner.py  test_sl_hunting_schema.py  test_sl_hunting_v2.py
Signal Generators/Subhamoy Strategies/: Nifty Goldmine Signal Generator.py  Nifty Money Machine Signal Generator.py  README.md  goldmine_strategy_logic.py  money_machine_strategy_logic.py  profit_shooter_strategy_logic.py  subhamoy_strategy_common.py  test_subhamoy_strategy_signal_generators.py
scripts/: check_coverage_thresholds.py
